--- a/package.json
+++ b/package.json
@@ -42,5 +42,5 @@
   "devDependencies": {
     "gh-pages": "^6.1.1"
   },
-  "homepage": "https://surabhishetty22.github.io/portofolia"
+  "homepage": "https://surabhishetty22.github.io/portofolia/"
 }
